--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Redes Sociais</title>
 </head>
 <body>
@@ -21,6 +22,6 @@
    <footer>
         <p>Criado por Patrícia Grczczak</p>
    </footer>
-   
+   <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
 </html>
